--- a/index.html
+++ b/index.html
@@ -1,145 +1,94 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>EduCode</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Edu Code</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row g-3 main-bg">
-      <!-- Educational Background -->
-      <div class="col-lg-3 col-md-12 p-4">
-        <div class="card mb-4 hover-elevate surface-mid">
-          <h3 class="text-center mt-3 section-title text-light">
-            Educational Background
-            <div class="gradient-divider"></div>
-          </h3>
-          <div class="d-flex flex-column gap-3 mt-3 mb-5 align-items-center">
-            <button class="btn btn-edu" data-bs-toggle="popover" data-bs-content="San Roque Elementary School (2008-2014)">Elementary
-            </button>
-            <button class="btn btn-edu" data-bs-toggle="popover" data-bs-content="San Roque National High School (2014-2018)">High School
-            </button>
-            <button class="btn btn-edu" data-bs-toggle="popover" data-bs-content="San Roque National High School - SHS (2018-2020)">Senior High School
-            </button>
-            <button class="btn btn-edu" data-bs-toggle="popover" data-bs-content="Polytechnic University of the Philippines (2020-Present)">Tertiary
-            </button>
-          </div>
-        </div>
-        <div class="card hover-elevate surface-dark">
-          <h2 class="text-center mt-3 section-title bold-font text-light">
-            Achievements
-          </h2>
-          <div class="gradient-divider"></div>
-          <ul class="list-group list-group-flush achievements-list">
-            <li class="list-group-item bg-transparent text-light">🏅 High School – Most Outstanding Student (2018)</li>
-            <li class="list-group-item bg-transparent text-light">🎓 Senior High School – With Honors (2020)</li>
-            <li class="list-group-item bg-transparent text-light">📘 Tertiary – Dean's Lister (2020–2021)</li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- Logo + About + Tech Stack -->
-      <div class="col-lg-6 col-md-12 p-4">
-        <!-- Logos -->
-        <div class="row g-3">
-          <div class="col-md-6 col-12">
-            <div class="card hover-elevate align-items-center p-3 surface-light">
-              <div class="d-flex align-items-center">
-                <img src="images/icons/PUP logo.png" class="img-fluid rounded-5 me-3 logo-img" alt="PUP Logo">
-                <h6 class="theme-text fw-bold">Polytechnic University of the Philippines</h6>
+  <div class="container-fluid" style="height: 100vh;">
+    <div class="row">
+      <div class="col-md-6 col-12 p-5 text-center">
+        <!-- Profile -->
+        <div class="row">
+          <div class="card rounded-4 mb-2" style="max-width: 100%; background-color: #D9D3C6; color: black;">
+            <div class="row g-0">
+              <div class="col-lg-4 col-md-12">
+                <img src="images/c95fac0b-1846-4ae0-9d99-020480d8e43c.jpg" class="img-fluid rounded mt-3 mb-2"
+                  style="width: 200px;" alt="my love">
               </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-12">
-            <div class="card hover-elevate align-items-center p-3 surface-light">
-              <div class="d-flex align-items-center">
-                <img src="images/icons/triwan.jpg" class="img-fluid rounded-5 me-3 logo-img" alt="Triwan Club Logo">
-                <h6 class="theme-text fw-bold">BSIT 3-1 <br>Triwan Club</h6>
+              <div class="col-md-12 col-lg-8">
+                <div class="card-body">
+                  <h1 class="card-title" style="font-family: var(--bold-font);">EduCode</h1>
+                  <p class="card-text text-center" style="font-family: var(--regular-font);">
+                    I am a student from Polytechnic University of the Philippines, currently taking up Bachelor of
+                    Science in Information Technology. I aim to become a full stack web developer in the future,
+                    focusing now on front-end development.
+                  </p>
+                  </p>
+                </div>
+
               </div>
             </div>
           </div>
         </div>
-
-        <!-- About Me -->
-        <div class="card hover-elevate mt-4 surface-deep">
-          <div class="row align-items-center g-3 p-3">
-            <div class="col-md-5 col-12 text-center">
-              <img src="images/c95fac0b-1846-4ae0-9d99-020480d8e43c.jpg" class="img-fluid rounded-4 profile-img" alt="Profile Image">
-            </div>
-            <div class="col-md-7 col-12">
-              <h3 class="text-light fw-bold">John Eduard A. Madriaga</h3>
-              <p class="text-light mt-2 profile-text">
-                I am a student from Polytechnic University of the Philippines, currently taking up Bachelor of Science in Information Technology. I aim to become a full stack web developer in the future, focusing now on front-end development.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Tech Stack -->
-        <div class="row mt-4 g-3 text-center">
+        <!--text Stack -->
+        <h1 style="color: #788978; text-shadow: 2px 2px 4px black; font-family: var(--bold-font);">Text Stacks</h1>
+        <div class="row">
           <div class="col-4">
-            <div class="card tech-card hover-elevate p-3 surface-mid">
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" class="img-fluid tech-icon" alt="Bootstrap">
+            <div class="card rounded-5" style="width: 100%; background-color: #D9D3C6;">
+              <i class="bi bi-filetype-html html-icon"
+                style="font-size: 60px; margin-bottom: 10px; color: #e34f26;"></i>
             </div>
           </div>
           <div class="col-4">
-            <div class="card tech-card hover-elevate p-3 surface-mid">
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="img-fluid tech-icon" alt="HTML5">
+            <div class="card rounded-5" style="width: 100%; background-color: #D9D3C6;">
+              <i class="bi bi-filetype-css css-icon" style="font-size: 60px; margin-bottom: 10px; color: #2965f1;"></i>
             </div>
           </div>
           <div class="col-4">
-            <div class="card tech-card hover-elevate p-3 surface-mid">
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="img-fluid tech-icon" alt="CSS3">
+            <div class="card rounded-5" style="width: 100%; background-color: #D9D3C6;">
+              <i class="bi bi-bootstrap-fill bootstrap-icon"
+                style="font-size: 60px; margin-bottom: 10px; color: #563d7c;"></i>
             </div>
           </div>
         </div>
-      </div>
-
-      <!-- Socials -->
-      <div class="col-lg-3 col-md-12 p-4">
-        <div class="card hover-elevate mb-3 surface-dark">
-          <div class="card-body text-center">
-            <h2 class="section-title text-light">Socials</h2>
-            <div class="gradient-divider mb-2"></div>
-            <p class="text-secondary small">(click to view)</p>
-            <div class="d-grid gap-2">
-              <a href="https://www.facebook.com/johneduard.madriaga.7/" target="_blank" class="btn btn-primary">Facebook</a>
-              <a href="#" class="btn btn-light">Tiktok</a>
-              <a href="#" class="btn instagram-btn">Instagram</a>
-              <a href="#" class="btn btn-dark">GitHub</a>
+        <!-- Educational Background -->
+        <div class="row">
+          <div class="col-6 mt-4">
+            <div class="card text-center rounded-5" style="width: 100%; height: 100%; background-color: #788978;">
+              <div class="card-body">
+                <h5 class="card-title"
+                  style="font-family: var(--bold-font); color: #D9D3C6; text-shadow: 2px 2px 4px #2F362F;">Educational
+                  Background</h5>
+                <a href="#" class="btn" style="background-color:#D9D3C6; font-family: var(--bold-font);">Go
+                  somewhere</a>
+              </div>
             </div>
           </div>
-        </div>
-
-        <div class="card hover-elevate mb-3 surface-mid">
-          <h5 class="card-header text-center fw-bold">Projects</h5>
-          <div class="card-body text-center">
-            <a href="#" class="btn btn-primary">🗃️</a>
+          <div class="col-6 mt-4">
+            <div class="card text-center rounded-5" style="width: 100%; height: 100%; background-color: #788978;">
+              <div class="card-body">
+                <h5 class="card-title"
+                  style="font-family: var(--bold-font); color: #D9D3C6; text-shadow: 2px 2px 4px #2F362F;">Educational
+                  Background</h5>
+                <a href="#" class="btn" style="background-color:#D9D3C6; font-family: var(--bold-font);">Go
+                  somewhere</a>
+              </div>
+            </div>
           </div>
-        </div>
-
-        <div class="card hover-elevate surface-light">
-          <h4 class="text-center mt-3 section-title theme-text"><b>Contact Me:</b></h4>
-          <div class="gradient-divider mb-2"></div>
-          <ul class="list-group list-group-flush text-center contact-list">
-            <li class="list-group-item">Email: example@example.com</li>
-            <li class="list-group-item">Phone: (000) 000-0000</li>
-          </ul>
         </div>
       </div>
     </div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    // Initialize popovers
-    document.querySelectorAll('[data-bs-toggle="popover"]').forEach(el => new bootstrap.Popover(el));
-  </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
