--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="card rounded-4 mb-2" style="max-width: 100%; background-color: #D9D3C6; color: black;">
             <div class="row g-0">
               <div class="col-lg-4 col-md-12">
-                <img src="images/c95fac0b-1846-4ae0-9d99-020480d8e43c.jpg" class="img-fluid rounded mt-3 mb-2"
+                <img src="images/c95fac0b-1846-4ae0-9d99-020480d8e43c.jpg" class="img-fluid rounded-5 mt-3 mb-2"
                   style="width: 200px;" alt="my love">
               </div>
               <div class="col-md-12 col-lg-8">
@@ -31,9 +31,7 @@
                     Science in Information Technology. I aim to become a full stack web developer in the future,
                     focusing now on front-end development.
                   </p>
-                  </p>
                 </div>
-
               </div>
             </div>
           </div>
@@ -62,12 +60,12 @@
         <!-- Educational Background -->
         <div class="row">
           <div class="col-6 mt-4">
-            <div class="card text-center rounded-5" style="width: 100%; height: 100%; background-color: #788978;">
+            <div class="card text-center rounded-5" style="width: 100%; height: auto; background-color: #788978;">
               <div class="card-body">
                 <h5 class="card-title"
                   style="font-family: var(--bold-font); color: #D9D3C6; text-shadow: 2px 2px 4px #2F362F;">Educational
                   Background</h5>
-                <a href="#" class="btn" style="background-color:#D9D3C6; font-family: var(--bold-font);">Go
+                <a href="#" class="btn mt-2" style="background-color:#D9D3C6; font-family: var(--bold-font);">Go
                   somewhere</a>
               </div>
             </div>
@@ -75,20 +73,123 @@
           <div class="col-6 mt-4">
             <div class="card text-center rounded-5" style="width: 100%; height: 100%; background-color: #788978;">
               <div class="card-body">
-                <h5 class="card-title"
-                  style="font-family: var(--bold-font); color: #D9D3C6; text-shadow: 2px 2px 4px #2F362F;">Educational
-                  Background</h5>
-                <a href="#" class="btn" style="background-color:#D9D3C6; font-family: var(--bold-font);">Go
-                  somewhere</a>
+                <h4 class="card-title"
+                  style="font-family: var(--bold-font); color: #D9D3C6; text-shadow: 2px 2px 4px #2F362F;">Socials
+                </h4>
+                <div class="row justify-content-center">
+                  <div class="col col-lg-2">
+                    <i class="bi bi-facebook" style="font-size: xx-large;"></i>
+                  </div>
+                  <div class="col-md-auto">
+                    <i class="bi bi-instagram" style="font-size: xx-large;"></i>
+                  </div>
+                  <div class="col col-lg-2">
+                    <i class="bi bi-github" style="font-size: xx-large;"></i>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"></script>
+      <div class="col-md-6 col-12 p-5 text-center">
+        <div class="row">
+          <div class="col-6">
+            <div class="card mb-3 rounded-5" style="max-width: 100%; background-color: #788978; color: #2F362F;">
+              <div class="row g-0">
+                <div class="col-md-4 mt-4">
+                  <img src="images/icons/PUP logo.png" class="img-fluid rounded-circle align-self-center" alt="PUPLOGO">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title" style="font-family: var(--bold-font);">Polytechnic University of the
+                      Philippines</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="card mb-3 rounded-5" style="max-width: 100%; background-color: #788978; color: #2F362F;">
+              <div class="row g-0">
+                <div class="col-md-4 mt-4">
+                  <img src="images/icons/triwan.jpg" class="img-fluid rounded-circle" style="width: 72px; height: 68px;"
+                    alt="TRIWAN">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h3 class="card-title mb-2 text-start" style="font-family: var(--bold-font);">Triwan <br> Club</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 mt-4">
+            <div class="card rounded-5 projects-card">
+              <div class="card-body project-card-body p-2 p-md-3 project-carousel">
+                <h1 class="card-title text-start">Projects</h1>
+
+                <div id="carouselExampleCaptions" class="carousel slide h-100" data-bs-ride="carousel">
+                  <!-- Carousel Indicators (dots) -->
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                      class="active"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></button>
+                  </div>
+
+                  <!-- Carousel Inner -->
+                  <div class="carousel-inner h-100">
+
+                    <!-- Slide 1 -->
+                    <div class="carousel-item active h-100">
+                      <a href="https://example.com/page1" class="d-block h-100">
+                        <img src="images/projects/samsung.jpg" class="d-block w-100" alt="Slide 1" />
+                      </a>
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5>Samsung S24 Ultra </h5>
+                        <p>Click the image to explore more about Samsung S24 Ultra</p>
+                        <a href="https://example.com/page1" class="btn"
+                          style="background-color: #788978; font-family: var(--bold-font);">Learn More</a>
+                      </div>
+                    </div>
+
+                    <!-- Slide 2 -->
+                    <div class="carousel-item h-100">
+                      <a href="https://example.com/page2" class="d-block h-100">
+                        <img src="images/projects/vigan.jpg" class="d-block w-100" alt="Slide 2" />
+                      </a>
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5>Vigan Herritage Escape</h5>
+                        <p>Discover the rich history and culture of <br> Vigan City</p>
+                        <a href="https://example.com/page2" class="btn text-dark"
+                          style="background-color: #788978; font-family: var(--bold-font);">Visit Now</a>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <!-- Carousel Controls -->
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
