--- a/index.html
+++ b/index.html
@@ -1,200 +1,194 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Edu Code</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 </head>
 
-<body>
+<body style="background-color: #2f362f">
   <div class="container-fluid">
-    <div class="row" style="height: 100vh;">
-      <div class="col-12 col-lg-6 p-5 text-center" style="height: 100vh;">
+    <div class="row align-items-start">
+      <!-- LEFT COLUMN -->
+      <div class="col-12 col-lg-6 p-4 text-center">
         <!-- Profile -->
-        <div class="row mb-2">
-          <div class="col-12">
-            <div class="card rounded-4 mb-2" style="max-width: 100%; background-color: #D9D3C6; color: black;">
-              <div class="row g-0">
-                <div class="col-3 d-block d-md-none"></div>
-                <div class="col-lg-4 col-md-12 col-5 p-2">
-                  <img src="images/c95fac0b-1846-4ae0-9d99-020480d8e43c.jpg" class="img-fluid rounded-5 mt-3 mb-2"
-                    alt="my love">
-                </div>
-                <div class="col-md-12 col-lg-8">
-                  <div class="card-body">
-                    <h1 class="card-title" style="font-family: var(--bold-font);">EduCode</h1>
-                    <p class="card-text text-center" style="font-family: var(--regular-font);">
-                      I am a student from Polytechnic University of the Philippines, currently taking up Bachelor of
-                      Science in Information Technology. I aim to become a full stack web developer in the future,
-                      focusing now on front-end development.
-                    </p>
-                  </div>
-                </div>
+        <div class="card rounded-4 mb-2" style="background-color: #d9d3c6; color: black">
+          <div class="row g-0 align-items-center">
+            <div class="col-12 col-md-4 text-center p-3">
+              <img src="images/c95fac0b-1846-4ae0-9d99-020480d8e43c.jpg" class="img-fluid rounded-5" alt="Profile" />
+            </div>
+            <div class="col-12 col-md-8">
+              <div class="card-body text-center text-md-start">
+                <h1 class="card-title" style="font-family: var(--bold-font)">
+                  EduCode
+                </h1>
+                <p class="card-text" style="font-family: var(--regular-font)">
+                  I am a student from Polytechnic University of the
+                  Philippines, currently taking up Bachelor of Science in
+                  Information Technology. I aim to become a full stack web
+                  developer in the future, focusing now on front-end
+                  development.
+                </p>
               </div>
             </div>
           </div>
         </div>
-        <!--text Stack -->
-        <h1 class="text-center p-2" style="color: #788978; text-shadow: 2px 2px 4px black; font-family: var(--bold-font);">Text Stacks</h1>
-        <div class="row mb-2">
+        <!-- Text Stacks -->
+        <h1 class="text-center p-2" style="
+              color: #788978;
+              text-shadow: 2px 2px 4px black;
+              font-family: var(--bold-font);
+            ">
+          Text Stacks
+        </h1>
+        <div class="row g-3">
           <div class="col-4">
-            <div class="card rounded-5" style="width: 100%; background-color: #D9D3C6;">
-              <i class="bi bi-filetype-html html-icon"
-                style="font-size: 60px; margin-bottom: 10px; color: #e34f26;"></i>
+            <div class="card rounded-5 p-3" style="background-color: #d9d3c6">
+              <i class="bi bi-filetype-html" style="font-size: 60px; color: #e34f26"></i>
             </div>
           </div>
           <div class="col-4">
-            <div class="card rounded-5" style="width: 100%; background-color: #D9D3C6;">
-              <i class="bi bi-filetype-css css-icon" style="font-size: 60px; margin-bottom: 10px; color: #2965f1;"></i>
+            <div class="card rounded-5 p-3" style="background-color: #d9d3c6">
+              <i class="bi bi-filetype-css" style="font-size: 60px; color: #2965f1"></i>
             </div>
           </div>
           <div class="col-4">
-            <div class="card rounded-5" style="width: 100%; background-color: #D9D3C6;">
-              <i class="bi bi-bootstrap-fill bootstrap-icon"
-                style="font-size: 60px; margin-bottom: 10px; color: #563d7c;"></i>
+            <div class="card rounded-5 p-3" style="background-color: #d9d3c6">
+              <i class="bi bi-bootstrap-fill" style="font-size: 60px; color: #563d7c"></i>
             </div>
           </div>
         </div>
-        <!-- Educational Background -->
-        <div class="row">
-          <div class="col-6 mt-4">
-            <div class="card text-center rounded-5" style="width: 100%; height: auto; background-color: #788978;">
+        <!-- Educational Background & Socials -->
+        <div class="row mt-4 g-3">
+          <div class="col-12 col-md-6">
+            <div class="card text-center rounded-5 h-100" style="background-color: #788978">
               <div class="card-body">
-                <h5 class="card-title"
-                  style="font-family: var(--bold-font); color: #D9D3C6; text-shadow: 2px 2px 4px #2F362F;">Educational
-                  Background</h5>
-                <a href="#" class="btn mt-2" style="background-color:#D9D3C6; font-family: var(--bold-font);">Go
-                  somewhere</a>
+                <h5 class="card-title" style="
+                      font-family: var(--bold-font);
+                      color: #d9d3c6;
+                      text-shadow: 2px 2px 4px #2f362f;
+                    ">
+                  Educational Background
+                </h5>
+                <a href="#" class="btn mt-2" style="
+                      background-color: #d9d3c6;
+                      font-family: var(--bold-font);
+                    ">Go somewhere</a>
               </div>
             </div>
           </div>
-          <div class="col-6 mt-4">
-            <div class="card text-center rounded-5" style="width: 100%; height: 100%; background-color: #788978;">
+          <div class="col-12 col-md-6">
+            <div class="card text-center rounded-5 h-100" style="background-color: #788978">
               <div class="card-body">
-                <h4 class="card-title"
-                  style="font-family: var(--bold-font); color: #D9D3C6; text-shadow: 2px 2px 4px #2F362F;">Socials
+                <h4 class="card-title" style="
+                      font-family: var(--bold-font);
+                      color: #d9d3c6;
+                      text-shadow: 2px 2px 4px #2f362f;
+                    ">
+                  Socials
                 </h4>
-                <div class="row justify-content-center">
-                  <div class="col col-lg-2">
-                    <i class="bi bi-facebook" style="font-size: xx-large;"></i>
-                  </div>
-                  <div class="col col-lg-2">
-                    <i class="bi bi-instagram" style="font-size: xx-large;"></i>
-                  </div>
-                  <div class="col col-lg-2">
-                    <i class="bi bi-github" style="font-size: xx-large;"></i>
-                  </div>
+                <div class="d-flex justify-content-evenly gap-3 mt-2">
+                  <i class="bi bi-facebook" style="font-size: xx-large"></i>
+                  <i class="bi bi-instagram" style="font-size: xx-large"></i>
+                  <i class="bi bi-github" style="font-size: xx-large"></i>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-12 col-lg-6 p-5 text-center">
-        <div class="row">
-          <div class="col-6">
-            <div class="card mb-3 rounded-5" style="max-width: 100%; background-color: #788978; color: #2F362F;">
-              <div class="row g-0">
-                <div class="col-md-4 mt-4">
-                  <img src="images/icons/PUP logo.png" class="img-fluid rounded-circle align-self-center" alt="PUPLOGO">
+      <!-- RIGHT COLUMN -->
+      <div class="col-12 col-lg-6 p-4 text-center">
+        <div class="row g-3 mb-5 equal-cards">
+          <div class="col-12 col-md-6">
+            <div class="card rounded-5" style="background-color: #788978; color: #2F362F;">
+              <div class="row g-0 align-items-center p-2">
+                <div class="col-4">
+                  <img src="images/icons/PUP logo.png" alt="PUPLOGO" class="club-logo">
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title" style="font-family: var(--bold-font);">Polytechnic University of the
-                      Philippines</h5>
-                  </div>
+                <div class="col-8 text-center">
+                  <h3 class="card-title" style="font-family: var(--bold-font);">PUP <br> Sto. Tomas</h3>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-6">
-            <div class="card mb-3 rounded-5" style="max-width: 100%; background-color: #788978; color: #2F362F;">
-              <div class="row g-0">
-                <div class="col-md-4 mt-4">
-                  <img src="images/icons/triwan.jpg" class="img-fluid rounded-circle" style="width: 72px; height: 68px;"
-                    alt="TRIWAN">
+
+          <div class="col-12 col-md-6">
+            <div class="card rounded-5" style="background-color: #788978; color: #2F362F;">
+              <div class="row g-0 align-items-center p-2">
+                <div class="col-4">
+                  <img src="images/icons/triwan.jpg" alt="TRIWAN" class="club-logo">
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h3 class="card-title mb-2 text-start" style="font-family: var(--bold-font);">Triwan <br> Club</h3>
-                  </div>
+                <div class="col-8 text-center">
+                  <h3 class="card-title" style="font-family: var(--bold-font);">Triwan <br> Club</h3>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-12 mt-4">
-            <div class="card rounded-5 projects-card">
-              <div class="card-body project-card-body p-2 p-md-3 project-carousel">
-                <h1 class="card-title text-start">Projects</h1>
 
-                <div id="carouselExampleCaptions" class="carousel slide h-100" data-bs-ride="carousel">
-                  <!-- Carousel Indicators (dots) -->
-                  <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
-                      class="active"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></button>
+        <!-- Projects -->
+        <div class="card rounded-5 mt-4 projects-card">
+          <div class="card-body project-card-body p-2 p-md-3 project-carousel">
+            <h1 class="card-title text-start">Projects</h1>
+            <div id="carouselExampleCaptions" class="carousel slide h-100" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                  class="active"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></button>
+              </div>
+              <div class="carousel-inner h-100">
+                <div class="carousel-item active h-100">
+                  <a href="https://example.com/page1" class="d-block h-100">
+                    <img src="images/projects/samsung.jpg" class="d-block w-100" alt="Slide 1" />
+                  </a>
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Samsung S24 Ultra</h5>
+                    <p>
+                      Click the image to explore more about Samsung S24 Ultra
+                    </p>
+                    <a href="https://example.com/page1" class="btn" style="
+                          background-color: #788978;
+                          font-family: var(--bold-font);
+                        ">Learn More</a>
                   </div>
-
-                  <!-- Carousel Inner -->
-                  <div class="carousel-inner h-100">
-
-                    <!-- Slide 1 -->
-                    <div class="carousel-item active h-100">
-                      <a href="https://example.com/page1" class="d-block h-100">
-                        <img src="images/projects/samsung.jpg" class="d-block w-100" alt="Slide 1" />
-                      </a>
-                      <div class="carousel-caption d-none d-md-block">
-                        <h5>Samsung S24 Ultra </h5>
-                        <p>Click the image to explore more about Samsung S24 Ultra</p>
-                        <a href="https://example.com/page1" class="btn"
-                          style="background-color: #788978; font-family: var(--bold-font);">Learn More</a>
-                      </div>
-                    </div>
-
-                    <!-- Slide 2 -->
-                    <div class="carousel-item h-100">
-                      <a href="https://example.com/page2" class="d-block h-100">
-                        <img src="images/projects/vigan.jpg" class="d-block w-100" alt="Slide 2" />
-                      </a>
-                      <div class="carousel-caption d-none d-md-block">
-                        <h5>Vigan Herritage Escape</h5>
-                        <p>Discover the rich history and culture of <br> Vigan City</p>
-                        <a href="https://example.com/page2" class="btn text-dark"
-                          style="background-color: #788978; font-family: var(--bold-font);">Visit Now</a>
-                      </div>
-                    </div>
-
+                </div>
+                <div class="carousel-item h-100">
+                  <a href="https://example.com/page2" class="d-block h-100">
+                    <img src="images/projects/vigan.jpg" class="d-block w-100" alt="Slide 2" />
+                  </a>
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Vigan Heritage Escape</h5>
+                    <p>Discover the rich history and culture of Vigan City</p>
+                    <a href="https://example.com/page2" class="btn text-dark" style="
+                          background-color: #788978;
+                          font-family: var(--bold-font);
+                        ">Visit Now</a>
                   </div>
-
-                  <!-- Carousel Controls -->
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
                 </div>
               </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
