--- a/index.html
+++ b/index.html
@@ -93,20 +93,31 @@
                   Socials
                 </h4>
                 <div class="d-flex justify-content-evenly gap-3 mt-2">
-                  <i class="bi bi-facebook" style="font-size: xx-large"></i>
-                  <i class="bi bi-instagram" style="font-size: xx-large"></i>
-                  <i class="bi bi-github" style="font-size: xx-large"></i>
+                  <a href="https://www.facebook.com/johneduard.madriaga.7" target="_blank" rel="noopener noreferrer"
+                    class="text-dark mx-2" aria-label="Facebook">
+                    <i class="bi bi-facebook" style="font-size: xx-large"></i>
+                  </a>
+                  <a href="https://www.instagram.com/duard.gg/" target="_blank" rel="noopener noreferrer"
+                    class="text-dark mx-2" aria-label="Instagram">
+                    <i class="bi bi-instagram" style="font-size: xx-large"></i>
+                  </a>
+                  <a href="https://github.com/EduCode597" target="_blank" rel="noopener noreferrer"
+                    class="text-dark mx-2" aria-label="GitHub">
+                    <i class="bi bi-github" style="font-size: xx-large"></i>
+                  </a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- RIGHT COLUMN -->
+
       <div class="col-12 col-lg-6 p-4 text-center">
         <div class="row g-3 mb-5 equal-cards">
+          <!-- First Card -->
           <div class="col-12 col-md-6">
-            <div class="card rounded-5" style="background-color: #788978; color: #2F362F;">
+            <div class="card rounded-5 h-100" style="background-color: #788978; color: #2F362F;">
+              <a href="https://www.pup.edu.ph/stotomas/" target="_blank" class="stretched-link"></a>
               <div class="row g-0 align-items-center p-2">
                 <div class="col-4">
                   <img src="images/icons/PUP logo.png" alt="PUPLOGO" class="club-logo">
@@ -118,8 +129,10 @@
             </div>
           </div>
 
+          <!-- Second Card -->
           <div class="col-12 col-md-6">
-            <div class="card rounded-5" style="background-color: #788978; color: #2F362F;">
+            <div class="card rounded-5 h-100" style="background-color: #788978; color: #2F362F;">
+              <a href="https://www.facebook.com/share/17aqtWexju/" target="_blank" class="stretched-link"></a>
               <div class="row g-0 align-items-center p-2">
                 <div class="col-4">
                   <img src="images/icons/triwan.jpg" alt="TRIWAN" class="club-logo">
@@ -131,6 +144,8 @@
             </div>
           </div>
         </div>
+
+
 
         <!-- Projects -->
         <div class="card rounded-5 mt-4 projects-card">
@@ -144,7 +159,7 @@
               </div>
               <div class="carousel-inner h-100">
                 <div class="carousel-item active h-100">
-                  <a href="https://example.com/page1" class="d-block h-100">
+                  <a href="https://educode597.github.io/SamsungS24Ultra/" class="d-block h-100">
                     <img src="images/projects/samsung.jpg" class="d-block w-100" alt="Slide 1" />
                   </a>
                   <div class="carousel-caption d-none d-md-block">
@@ -152,20 +167,20 @@
                     <p>
                       Click the image to explore more about Samsung S24 Ultra
                     </p>
-                    <a href="https://example.com/page1" class="btn" style="
+                    <a href="https://educode597.github.io/SamsungS24Ultra/" class="btn" style="
                           background-color: #788978;
                           font-family: var(--bold-font);
                         ">Learn More</a>
                   </div>
                 </div>
                 <div class="carousel-item h-100">
-                  <a href="https://example.com/page2" class="d-block h-100">
+                  <a href="https://educode597.github.io/Vigan-City/" class="d-block h-100">
                     <img src="images/projects/vigan.jpg" class="d-block w-100" alt="Slide 2" />
                   </a>
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Vigan Heritage Escape</h5>
                     <p>Discover the rich history and culture of Vigan City</p>
-                    <a href="https://example.com/page2" class="btn text-dark" style="
+                    <a href="https://educode597.github.io/Vigan-City/" class="btn text-dark" style="
                           background-color: #788978;
                           font-family: var(--bold-font);
                         ">Visit Now</a>
