fixed some bugs

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                   class="active"></button>
                 <button type="button" data-bs-target="#carouselProject" data-bs-slide-to="1"></button>
                 <button type="button" data-bs-target="#carouselProject" data-bs-slide-to="2"></button>
+                <button type="button" data-bs-target="#carouselProject" data-bs-slide-to="3"></button>
               </div>
               <div class="carousel-inner h-100">
                 <div class="carousel-item active h-100">
